--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.jpa.database=sqlserver
+spring.datasource.url=jdbc:sqlserver://rtlibraryserver.database.windows.net:1433;database=RTLIBRARY
+spring.datasource.username=thanmai
+spring.datasource.password=Springfield@12345
+spring.datasource.driver-className=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
